# simple-pi

./: .travis.yml  Expr.hs  Grammar.hs  LICENSE  Main.hs  README.md  Sugar.hs  nat.spi  numerals.spi  simple-pi.cabal  stack.yaml
SPI/: Env.hs  Error.hs  Eval.hs  Expr.hs  Grammar.hs  Pretty.hs  Sugar.hs  Typecheck.hs  Value.hs
examples/: comp.spi  nat.spi  numerals.spi
src/Language/: SimplePi.hs
src/Language/SimplePi/: Lexer.x  LexerInterface.hs  Parser.y  Pretty.hs  Token.hs  Types.hs
src/SPI/: Env.hs  Error.hs  Expr.hs  Grammar.hs  Pretty.hs  Sugar.hs  Typecheck.hs  Value.hs
src/SimpTT/: Context.hs  Error.hs  Eval.hs  Expr.hs  Sugar.hs
tests/: Tests.hs
