name:                simple-pi
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/esmolanka/simple-pi#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    SPI.Expr
    SPI.Typecheck
    SPI.Sugar
    SPI.Grammar
    SPI.Pretty
    SPI.Value
    SPI.Error
    SPI.Env
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl, transformers, containers, haskeline, sexp-grammar,
                       bytestring, text, semigroups, recursion-schemes

executable spi
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       simple-pi,
                       base >= 4.7 && < 5, mtl, transformers, containers, haskeline, sexp-grammar,
                       bytestring, text, semigroups, recursion-schemes

executable spi-tests
  hs-source-dirs:      tests
  main-is:             Tests.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       simple-pi,
                       base >= 4.7 && < 5, mtl, transformers, containers, haskeline, sexp-grammar,
                       bytestring, text, semigroups, recursion-schemes
