name:                simple-pi
version:             0.1.0.0
synopsis:            Toy implementation of DTLC.
description:         Please see README.md
homepage:            https://github.com/esmolanka/simple-pi#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-tools:         alex, happy
  hs-source-dirs:      src
  ghc-options:         -Werror -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    SPI.Env
    SPI.Error
    SPI.Expr
    SPI.Sugar
    SPI.Typecheck
    SPI.Value

    Language.SimplePi
    Language.SimplePi.Lexer
    Language.SimplePi.LexerInterface
    Language.SimplePi.Parser
    Language.SimplePi.Pretty
    Language.SimplePi.Token
    Language.SimplePi.Types

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl, transformers, containers,
                       bytestring, text, semigroups, recursion-schemes,
                       wl-pprint-text, array

executable spi
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       simple-pi, base >= 4.7 && < 5, mtl, transformers,
                       containers, bytestring, text

test-suite spi-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       simple-pi, base >= 4.7 && < 5, mtl, transformers,
                       containers, text, tasty, tasty-hunit
